--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,26 +1,26 @@
-name = "hk" # todo
+name = "Indo" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "hk.fahrilvpn.my.id"
+pattern = "indo.fahrilvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cms.ruangguru.com.hk.fahrilvpn.my.id"
+pattern = "cms.ruangguru.com.indo.fahrilvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "gw.ruangguru.com.hk.fahrilvpn.my.id"
+pattern = "gw.ruangguru.com.indo.fahrilvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "udemy.com.hk.fahrilvpn.my.id"
+pattern = "udemy.com.indo.fahrilvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "quiz.int.vidio.com.hk.fahrilvpn.my.id"
+pattern = "quiz.int.vidio.com.indo.fahrilvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "blue.blibli.com.hk.fahrilvpn.my.id"
+pattern = "blue.blibli.com.indo.fahrilvpn.my.id"
 custom_domain = true
 
 [vars]
