--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,7 @@ name = "sg1" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
+compatibility_date = "2023-05-26"
 routes = [
 	{ pattern = "support.duolingo.com.heryanatunnel.my.id", custom_domain = true },
 	{ pattern = "devsupport.microsoft.com.heryanatunnel.my.id", custom_domain = true },
