--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,22 +5,22 @@ name = "jpy" # todo
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "japan.syarifahsatya.biz.id"
+pattern = "sgdo.syarifahsatya.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.japan.syarifahsatya.biz.id"
+pattern = "shopee.co.id.sgdo.syarifahsatya.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.japan.syarifahsatya.biz.id"
+pattern = "cf.shopee.co.id.sgdo.syarifahsatya.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.japan.syarifahsatya.biz.id"
+pattern = "cv.shopee.sg.sgdo.syarifahsatya.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.japan.syarifahsatya.biz.id"
+pattern = "cvs-deo.shopeemobile.com.sgdo.syarifahsatya.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.japan.syarifahsatya.biz.id"
+pattern = "ava.game.naver.com.sgdo.syarifahsatya.biz.id"
 custom_domain = true
 
 [vars]
