--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,26 +1,26 @@
-name = "sgdo" # todo
+name = "jpy" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sgdo.syarifahsatya.biz.id"
+pattern = "japan.syarifahsatya.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.sgdo.syarifahsatya.biz.id"
+pattern = "shopee.co.id.japan.syarifahsatya.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.sgdo.syarifahsatya.biz.id"
+pattern = "cf.shopee.co.id.japan.syarifahsatya.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.sgdo.syarifahsatya.biz.id"
+pattern = "cv.shopee.sg.japan.syarifahsatya.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.sgdo.syarifahsatya.biz.id"
+pattern = "cvs-deo.shopeemobile.com.japan.syarifahsatya.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.sgdo.syarifahsatya.biz.id"
+pattern = "ava.game.naver.com.japan.syarifahsatya.biz.id"
 custom_domain = true
 
 [vars]
