--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,27 @@
-name = "cf-worker-ws-dev" # todo
+name = "indo" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
+[[routes]]
+pattern = "indo.absvpn.my.id"
+custom_domain = true
+[[routes]]
+pattern = "cms.ruangguru.com.indo.absvpn.my.id"
+custom_domain = true
+[[routes]]
+pattern = "gw.ruangguru.com.indo.absvpn.my.id"
+custom_domain = true
+[[routes]]
+pattern = "udemy.com.indo.absvpn.my.id"
+custom_domain = true
+[[routes]]
+pattern = "quiz.int.vidio.com.indo.absvpn.my.id"
+custom_domain = true
+[[routes]]
+pattern = "blue.blibli.com.indo.absvpn.my.id"
+custom_domain = true
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
