--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,26 +1,26 @@
-name = "indo" # todo
+name = "idn" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "indo.absvpn.my.id"
+pattern = "idn.absvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cms.ruangguru.com.indo.absvpn.my.id"
+pattern = "cms.ruangguru.com.idn.absvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "gw.ruangguru.com.indo.absvpn.my.id"
+pattern = "gw.ruangguru.com.idn.absvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "udemy.com.indo.absvpn.my.id"
+pattern = "udemy.com.idn.absvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "quiz.int.vidio.com.indo.absvpn.my.id"
+pattern = "quiz.int.vidio.com.idn.absvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "blue.blibli.com.indo.absvpn.my.id"
+pattern = "blue.blibli.com.idn.absvpn.my.id"
 custom_domain = true
 
 [vars]
