--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,23 +4,68 @@ name = "ikd" # todo
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
+
 [[routes]]
-pattern = "xr-ikd001.vpnwild.xyz"
+pattern = "*.fb.com.xr-atha001.vpnwild.xyz"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.xr-ikd001.vpnwild.xyz"
+pattern = "*.fb.com.tr-atha001.vpnwild.xyz"
+custom_domain = true
+
+[[routes]]
+pattern = "*.ava.game.naver.com.xr-atha001.vpnwild.xyz"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.xr-ikd001.vpnwild.xyz"
+pattern = "*.ava.game.naver.com.tr-atha001.vpnwild.xyz"
+custom_domain = true
+
+[[routes]]
+pattern = "*.webex.com.xr-atha001.vpnwild.xyz"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.xr-ikd001.vpnwild.xyz"
+pattern = "*.webex.com.tr-atha001.vpnwild.xyz"
+custom_domain = true
+
+[[routes]]
+pattern = "*.zoom.us.xr-atha001.vpnwild.xyz"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.co.id.xr-ikd001.vpnwild.xyz"
+pattern = "*.zoom.us.tr-atha001.vpnwild.xyz"
+custom_domain = true
+
+[[routes]]
+pattern = "*.noice.id.xr-atha001.vpnwild.xyz"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.xr-ikd001.vpnwild.xyz"
+pattern = "*.noice.id.tr-atha001.vpnwild.xyz"
+custom_domain = true
+
+[[routes]]
+pattern = "*.spotify.com.xr-atha001.vpnwild.xyz"
+custom_domain = true
+[[routes]]
+pattern = "*.spotify.com.tr-atha001.vpnwild.xyz"
+custom_domain = true
+
+[[routes]]
+pattern = "*.vidio.com.xr-atha001.vpnwild.xyz"
+custom_domain = true
+[[routes]]
+pattern = "*.vidio.com.tr-atha001.vpnwild.xyz"
+custom_domain = true
+
+[[routes]]
+pattern = "*.ruangguru.com.xr-atha001.vpnwild.xyz"
+custom_domain = true
+[[routes]]
+pattern = "*.ruangguru.com.tr-atha001.vpnwild.xyz"
+custom_domain = true
+
+[[routes]]
+pattern = "*.duolingo.com.xr-atha001.vpnwild.xyz"
+custom_domain = true
+[[routes]]
+pattern = "*.duolingo.com.tr-atha001.vpnwild.xyz"
 custom_domain = true
 
 [vars]
