--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "amazon" # todo
+name = "akamai" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "amazon.fahrylvpn.my.id"
+pattern = "akamai.fahrylvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cms.ruangguru.com.amazon.fahrylvpn.my.id"
+pattern = "cms.ruangguru.com.akamai.fahrylvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "gw.ruangguru.com.amazon.fahrylvpn.my.id"
+pattern = "gw.ruangguru.com.akamai.fahrylvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "udemy.com.amazon.fahrylvpn.my.id"
+pattern = "udemy.com.akamai.fahrylvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "quiz.int.vidio.com.amazon.fahrylvpn.my.id"
+pattern = "quiz.int.vidio.com.akamai.fahrylvpn.my.id"
 custom_domain = true
 
 [vars]
