--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,7 +5,7 @@ name = "gcp-id" # todo
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-patern = "id-gcp.whxdev.love"
+patern = "gcp-id.whxdev.love"
 custom_domain = true
 
 [vars]
