--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,14 +1,20 @@
-name = "gcp-jp" # todo
+name = "msc-jp" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "gcp-jp.whxdev.love"
+pattern = "msc-jp.whxdev.love"
 custom_domain = true
-
+[[routes]]
+pattern = "ava.game.naver.com.msc-jp.whxdev.love"
+custom_domain = true
+[[routes]]
+pattern = "quiz.int.vidio.com.msc-jp.whxdev.love"
+custom_domain = true
 [vars]
+
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
 # PROXYIP = "1.2.3.4"
 # DNS_RESOLVER_URL = "https://cloudflare-dns.com/dns-query"
