--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,17 +1,17 @@
-name = "gmo-jp" # todo
+name = "xtm-jp" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "gmo-jp.whxdev.love"
+pattern = "xtm-jp.whxdev.love"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.gmo-jp.whxdev.love"
+pattern = "ava.game.naver.com.xtm-jp.whxdev.love"
 custom_domain = true
 [[routes]]
-pattern = "quiz.int.vidio.com.gmo-jp.whxdev.love"
+pattern = "quiz.int.vidio.com.xtm-jp.whxdev.love"
 custom_domain = true
 
 [vars]
