--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,17 +1,17 @@
-name = "ovh-sg" # todo
+name = "lnd-sg" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "ovh-sg.whxdev.love"
+pattern = "lnd-sg.whxdev.love"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.ovh-sg.whxdev.love"
+pattern = "ava.game.naver.com.lnd-sg.whxdev.love"
 custom_domain = true
 [[routes]]
-pattern = "quiz.int.vidio.com.ovh-sg.whxdev.love"
+pattern = "quiz.int.vidio.com.lnd-sg.whxdev.love"
 custom_domain = true
 
 [vars]
