--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "do" # todo
+name = "sglinode" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "do.muhno.my.id"
+pattern = "sglinode.muhno.my.id"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.do.muhno.my.id"
+pattern = "ava.game.naver.com.sglinode.muhno.my.id"
 custom_domain = true
 [[routes]]
-pattern = "blog.webex.com.do.muhno.my.id"
+pattern = "blog.webex.com.sglinode.muhno.my.id"
 custom_domain = true
 [[routes]]
-pattern = "quiz.staging.vidio.com.do.muhno.my.id"
+pattern = "quiz.staging.vidio.com.sglinode.muhno.my.id"
 custom_domain = true
 [[routes]]
-pattern = "suport.duolingo.com.do.muhno.my.id"
+pattern = "suport.duolingo.com.sglinode.muhno.my.id"
 custom_domain = true
 
 [vars]
@@ -27,4 +27,4 @@ custom_domain = true
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "c87d4795-af60-46b9-87ce-7f754bdc9c0f,97781dac-9446-4be7-934e-75b81129b065,4f488022-893f-4cc7-abaa-f4c1a45fc46b"
+UUID = "8205f71a-30b9-4088-9885-3fa12869dbee"
