--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,15 @@
-name = "cf-worker-ws-dev" # todo
+name = "indo" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
+[[routes]]
+pattern = "indo.tokekcool.my.id"
+custom_domain = true
+[[routes]]
+pattern = "ava.game.naver.com.indo.tokekcool.my.id"
+custom_domain = true
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
@@ -12,4 +18,4 @@ compatibility_date = "2023-05-26"
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "cafad20b-93b3-4181-8b5a-f7bb8a85a50a"
+UUID = "e27a3edb-c99d-411e-b98f-027582ccb327"
