--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,72 @@
-name = "cf-worker-ws-dev" # todo
+name = "idx" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
+[[routes]]
+pattern = "idx.cingoyen.my.id"
+custom_domain = true
+[[routes]]
+pattern = "cvs-deo.shopeemobile.com.idx.cingoyen.my.id"
+custom_domain = true
+[[routes]]
+pattern = "mssdk24-normal-useast2a.tiktokv.com.idx.cingoyen.my.id"
+custom_domain = true
+[[routes]]
+pattern = "ava.game.naver.com.idx.cingoyen.my.id"
+custom_domain = true
+[[routes]]
+pattern = "whatsapp.net.idx.cingoyen.my.id"
+custom_domain = true
+[[routes]]
+pattern = "graph.instagram.com.idx.cingoyen.my.id"
+custom_domain = true
+[[routes]]
+pattern = "zaintest.vuclip.com.idx.cingoyen.my.id"
+custom_domain = true
+[[routes]]
+pattern = "investors.spotify.com.idx.cingoyen.my.id"
+custom_domain = true
+[[routes]]
+pattern = "live.iflix.com.idx.cingoyen.my.id"
+custom_domain = true
+[[routes]]
+pattern = "web.poe.garena.com.idx.cingoyen.my.id"
+custom_domain = true
+[[routes]]
+pattern = "blog.webex.com.idx.cingoyen.my.id"
+custom_domain = true
+[[routes]]
+pattern = "support.zoom.us.idx.cingoyen.my.id"
+custom_domain = true
+[[routes]]
+pattern = "app.gopay.co.id.idx.cingoyen.my.id"
+custom_domain = true
+[[routes]]
+pattern = "token-media-vidio-com.akamaized.net.idx.cingoyen.my.id"
+custom_domain = true
+[[routes]]
+pattern = "blog.clova.line.me.idx.cingoyen.my.id"
+custom_domain = true
+[[routes]]
+pattern = "dl.cvs.freefiremobile.com.idx.cingoyen.my.id"
+custom_domain = true
+[[routes]]
+pattern = "s.youtube.com.idx.cingoyen.my.id"
+custom_domain = true
+[[routes]]
+pattern = "gocorp.gojek.com.idx.cingoyen.my.id"
+custom_domain = true
+[[routes]]
+pattern = "edge-ig-mqtt-p4-shv-04-sin6.facebook.com.idx.cingoyen.my.id"
+custom_domain = true
+[[routes]]
+pattern = "quiz.vidio.com"
+custom_domain = true
+[[routes]]
+pattern = "customlinks.appsflyer.com.idx.cingoyen.my.id"
+custom_domain = true
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
@@ -12,4 +75,4 @@ compatibility_date = "2023-05-26"
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "1b6c1745-992e-4aac-8685-266c090e50ea,89b64978-6244-4bf3-bf64-67ade4ce5c8f,d342d11e-d424-4583-b36e-524ab1f0afa4"
+UUID = "2afda442-1fcd-4b3e-beec-b25431073d93"
