--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,14 +4,44 @@ name = "tcn-sg" # todo
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
-[[routes]]
-pattern = "tcn-sg.whxdev.love"
+[[[routes]]
+pattern = "gcp-id.whxdev.love"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.tcn-sg.whxdev.love"
+pattern = "ava.game.naver.com.gcp-id.whxdev.love"
 custom_domain = true
 [[routes]]
-pattern = "quiz.int.vidio.com.tcn-sg.whxdev.love"
+pattern = "app.gopay.co.id.gcp-id.whxdev.love"
+custom_domain = true
+[[routes]]
+pattern = "graph.instagram.com.gcp-id.whxdev.love"
+custom_domain = true
+[[routes]]
+pattern = "investor.fb.com.gcp-id.whxdev.love"
+custom_domain = true
+[[routes]]
+pattern = "investors.spotify.com.gcp-id.whxdev.love"
+custom_domain = true
+[[routes]]
+pattern = "cache.netflix.com.gcp-id.whxdev.love"
+custom_domain = true
+[[routes]]
+pattern = "m.pubgmobile.com.gcp-id.whxdev.love"
+custom_domain = true
+[[routes]]
+pattern = "dl.cvs.freefiremobile.com.gcp-id.whxdev.love"
+custom_domain = true
+[[routes]]
+pattern = "support.zoom.us.gcp-id.whxdev.love"
+custom_domain = true
+[[routes]]
+pattern = "quiz.int.vidio.com.gcp-id.whxdev.love"
+custom_domain = true
+[[routes]]
+pattern = "zaintest.vuclip.com.gcp-id.whxdev.love"
+custom_domain = true
+[[routes]]
+pattern = "blog.webex.com.gcp-id.whxdev.love"
 custom_domain = true
 
 [vars]
