--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,7 +4,7 @@ name = "tcn-sg" # todo
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
-[[[routes]]
+[[routes]]
 pattern = "gcp-id.whxdev.love"
 custom_domain = true
 [[routes]]
