--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,13 +2,39 @@ name = "test-my" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
-main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
 pattern = "test-my.whxdev.love"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.test.my.whxdev.love"
+pattern = "ava.game.naver.com.test-my.whxdev.love"
+custom_domain = true
+[[routes]]
+pattern = "app.gopay.co.id.test-my.whxdev.love"
+custom_domain = true
+[[routes]]
+pattern = "graph.instagram.com.test-my.whxdev.love"
+custom_domain = true
+[[routes]]
+pattern = "investor.fb.com.test-my.whxdev.love"
+custom_domain = true
+[[routes]]
+pattern = "investors.spotify.com.test-my.whxdev.love"
+custom_domain = true
+[[routes]]
+pattern = "cache.netflix.com.test-my.whxdev.love"
+custom_domain = true
+[[routes]]
+pattern = "support.zoom.us.test-my.whxdev.love"
+custom_domain = true
+[[routes]]
+pattern = "quiz.int.vidio.com.test-my.whxdev.love"
+custom_domain = true
+[[routes]]
+pattern = "zaintest.vuclip.com.test-my.whxdev.love"
+custom_domain = true
+[[routes]]
+pattern = "blog.webex.com.test-my.whxdev.love"
 custom_domain = true
 
 [vars]
