--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,6 +2,7 @@ name = "test-my" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
+main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
 pattern = "test-my.whxdev.love"
