--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,45 +1,19 @@
-name = "test-my" # todo
-#name = "cf-worker-connect-test" # todo
-#main = "test/worker/cf-cdn-cgi-trace2.js"
-#main = "test/worker/worker-connect-test.js"
+name = "test-my"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
-[[routes]]
-pattern = "test-my.whxdev.love"
-custom_domain = true
-[[routes]]
-pattern = "ava.game.naver.com.test-my.whxdev.love"
-custom_domain = true
-[[routes]]
-pattern = "app.gopay.co.id.test-my.whxdev.love"
-custom_domain = true
-[[routes]]
-pattern = "graph.instagram.com.test-my.whxdev.love"
-custom_domain = true
-[[routes]]
-pattern = "investor.fb.com.test-my.whxdev.love"
-custom_domain = true
-[[routes]]
-pattern = "investors.spotify.com.test-my.whxdev.love"
-custom_domain = true
-[[routes]]
-pattern = "cache.netflix.com.test-my.whxdev.love"
-custom_domain = true
-[[routes]]
-pattern = "quiz.int.vidio.com.test-my.whxdev.love"
-custom_domain = true
-[[routes]]
-pattern = "zaintest.vuclip.com.test-my.whxdev.love"
-custom_domain = true
-[[routes]]
-pattern = "blog.webex.com.test-my.whxdev.love"
-custom_domain = true
-
+routes = [
+  { pattern = "test-my.whxdev.love", custom_domain = true },
+  { pattern = "ava.game.naver.com.test-my.whxdev.love", custom_domain = true },
+  { pattern = "investors.spotify.com.test-my.whxdev.love", custom_domain = true },
+  { pattern = "investor.fb.com.test-my.whxdev.love", custom_domain = true },
+  { pattern = "graph.instagram.com.test-my.whxdev.love", custom_domain = true },
+  { pattern = "cache.netflix.com.test-my.whxdev.love", custom_domain = true },
+  { pattern = "quiz.int.vidio.com.test-my.whxdev.love", custom_domain = true },
+  { pattern = "zaintest.vuclip.com.test-my.whxdev.love", custom_domain = true },
+  { pattern = "blog.webex.com.test-my.whxdev.love", custom_domain = true },
+  { pattern = "support.zoom.us.test-my.whxdev.love", custom_domain = true },
+]
+workers_dev = false
 [vars]
-# UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
-# PROXYIP = "1.2.3.4"
-# DNS_RESOLVER_URL = "https://cloudflare-dns.com/dns-query"
-# NODE_ID = "1"
-# API_TOKEN = "example_dev_token"
-# API_HOST = "api.v2board.com"
 UUID = "cf76a0ef-0b95-4e28-ab41-5faf69b60a6f"
+DNS_RESOLVER_URL = "https://dns.cloudflare.com/dns-query"
