--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,45 +1,205 @@
-name = "boostr3" # todo
+name = "free1" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "boostr3.fadzvpnproject.xyz"
+pattern = "free1.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.boostr3.fadzvpnproject.xyz"
+pattern = "ava.game.naver.com.free1.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "blog.webex.com.boostr3.fadzvpnproject.xyz"
+pattern = "www.help.tinder.com.free1.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "www.sushiroll.co.id.boostr3.fadzvpnproject.xyz"
+pattern = "www.sushiroll.co.id.free1.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "blog.sushiroll.co.id.boostr3.fadzvpnproject.xyz"
+pattern = "blog.sushiroll.co.id.free1.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "cdn.appsflyer.com.boostr3.fadzvpnproject.xyz"
+pattern = "cdn.appsflyer.com.free1.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "investor.fb.com.boostr3.fadzvpnproject.xyz"
+pattern = "investor.fb.com.free1.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "investors.spotify.com.boostr3.fadzvpnproject.xyz"
+pattern = "investors.spotify.com.free1.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "www.joox.com.boostr3.fadzvpnproject.xyz"
+pattern = "www.joox.com.free1.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "quiz.staging.vidio.com.boostr3.fadzvpnproject.xyz"
+pattern = "quiz.staging.vidio.com.free1.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "zoomcares.zoom.us.boostr3.fadzvpnproject.xyz"
+pattern = "zoomcares.zoom.us.free1.fadzvpnproject.xyz"
 custom_domain = true
 [[routes]]
-pattern = "graph.facebook.com.boostr3.fadzvpnproject.xyz"
+pattern = "graph.facebook.com.free1.fadzvpnproject.xyz"
 custom_domain = true
+[[routes]]
+pattern = "poe.garena.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "games.axis.co.id.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "api.ovo.id.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "cdnodeb.visionplus.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "104.26.6.171.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "app.gopay.co.id.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "go.appsflyer.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "edu.ruangguru.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "creativeservices.netflix.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "npca.netflix.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "gw.ruangguru.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "104.16.51.111.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "web.poe.garena.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "static.cdninstagram.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "dl.cvs.freefiremobile.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "104.17.74.206.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "104.17.3.81.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "sogood.linefriends.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "104.18.29.141.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "layanan.ruangguru.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "help.pornhub.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "io.ruangguru.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "graph.instagram.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "162.159.130.11.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "freefiremobile.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "edu.udemy.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "acces.iflix.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "support.zoom.us.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "cache.netflix.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "kuota.axis.co.id.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "104.19.143.108.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "141.193.213.11.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "openconnect.netflix.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "www.eu-tiktokforbusiness.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "z-p4.www.instagram.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "zaintest.vuclip.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "whatsapp.net.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "104.18.34.70.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "kopsupporten.garena.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "testtrackclf.pubmatic.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "v.whatsapp.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "pubgmobile.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "suporte.garena.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "backdoor.farlight84miraclegames.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "update2.farlight84miraclegames.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "go2.facebookinc.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "status.fb.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "opensource.fb.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "blog.x.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "help.twiter.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "m.mobilelegeds.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "ffsupport.garena.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+[[routes]]
+pattern = "dl.cvs.freefiremobile.com.free1.fadzvpnproject.xyz"
+custom_domain = true
+
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
