--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,6 +4,15 @@ name = "server-sg" # todo
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
+[[routes]]
+pattern = "sg1.captnemo.my.id"
+custom_domain = true
+[[routes]]
+pattern = "quiz.int.vidio.com.sg1.captnemo.my.id"
+custom_domain = true
+[[routes]]
+pattern = "quiz.vidio.com.sg1.captnemo.my.id"
+custom_domain = true
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
